# Seam-Carving

./: CMakeLists.txt  OpenCV.props  README.md  common.h  gui.h  main.cpp  seamCarving.h  shrink.h
include/: enlarge.h  param.h
